Add basic col pages and credits/thank you content

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
     <div class="main-foot__inner">
         <div class="main-foot__text">
             <a href="/credits.html" class="main-foot__link">Credits</a>
-            <span class="main-foot__copy">&copy; Tomas Mulder</span>
+            <span class="main-foot__copy">&copy; 2016 Tomas Mulder</span>
         </div>
     </div>
 </footer>
