--- a/_sass/stars/zemplate/_1_variables.scss
+++ b/_sass/stars/zemplate/_1_variables.scss
@@ -85,3 +85,8 @@ $timeline-gaps:             9em;        // each year period's height
 $timeline-gaps--large:      11em;       // each year period's height - larger
 $timeline-border-width:     .1875em;    // all timeline borders
 $year-word-height:          .85em;      // the height of the "20**" word for centering
+
+/*------------------------------------*\
+    ::Footer
+\*------------------------------------*/
+$footer-height: 1.7em;
