--- a/_sass/moons/components/_main-foot.scss
+++ b/_sass/moons/components/_main-foot.scss
@@ -7,12 +7,13 @@
     float: left;
     width: 100%;
     &__text {
-        border-top: $timeline-border-width solid $color-2;
         float: right;
-        background-color: $color-2;
         width: 66.66%;
-        padding: .2em $gap;
-        color: $color-1;
+        height: $footer-height;
+        padding: .2em $gap 0;
+        font-style: italic;
+        border-top: 1px solid lighten($color-2, 65%);
+        color: desaturate(lighten($color-1, 35%), 35%);
         @include bp($tab--max){
             width: 50% - .08;
             font-size: calc(.5rem + .7vw); // milder vw font resizing
@@ -20,10 +21,11 @@
         @include bp($phone--max){
             font-size: .9em;
             width: 100%;
+            border-top-color: darken($color-1-light, 10%);
         }
     }
     &__link {
-        color: $color-1-dark;
+        color: desaturate(lighten($color-1, 35%), 35%);
         text-decoration: none;
         &:hover {
             color: $color-2;
