--- a/_sass/stars/zemplate/_1_variables.scss
+++ b/_sass/stars/zemplate/_1_variables.scss
@@ -18,9 +18,9 @@ $color-1-dark:      #00caa9; // e.g. background
 
 //secondary colors / global nav and Local Nav.
 $color-2:           #284e64;
-$color-2-light:     lighten($color-2,20%);
+$color-2-light:     #11998e;
 $color-2-lightest:  #fff;
-$color-2-dark:      darken($color-2,5%);
+$color-2-dark:      #11212a;
 
 //tertiary colors / secondary global nav and secondary local nav.
 $color-3:           #F79021;
