--- a/_sass/styles.scss
+++ b/_sass/styles.scss
@@ -1,142 +1,68 @@
 /*------------------------------------*\
     ::Index SASS Controller
     ----------------------------------*
-    ::Stars
-        ::Foundation
-        ::Zemplate
-    ::Plannets
-        ::Base
-        ::WordPress (WP)
-        ::Plugins
-        ::Layouts
-    ::Moons
-        ::Components
-        ::Views
-    ::Comets
-    ::Stars
+    ::Global
+    ::Base
+    ::Components
+    ::Layout
+    ::Templates
 \*------------------------------------*/
 
 /*------------------------------------*\
     ::Stars
     ----------------------------------*
     high level stuff goes here, like
-    mixins, variables, and grid
-    frameworks. Usually things in here
-    don't get output: they're just
-    tools to use elsewhere.
+    mixins, variables, etc. Usually
+    things in here don't get output:
+    they're just tools to use elsewhere.
 \*------------------------------------*/
-    /*------------------------------------*\
-        ::Foundation
-        ----------------------------------*
-        this is the framework we use, mainly
-        as our grid system.
-    \*------------------------------------*/
-    $row-width: 1440px; //sets the width of rows (prod:1440px/dev:1024px)
-    $include-html-classes: false; //eliminates basic styling (_global.scss)
-    @import "stars/foundation/scss/foundation/components/grid";
+@import "global/variables";
+@import "global/mixins";
+@import "global/extends";
 
-    /*------------------------------------*\
-        ::Zemplate
-        ----------------------------------*
-        variables, mixins, extends, and
-        other functional helpers you'd like
-        available project-wide go here.
-    \*------------------------------------*/
-    @import "stars/zemplate/*";
 
 /*------------------------------------*\
-    ::Plannets
+    ::Base
     ----------------------------------*
-    global styling that affects nearly
+    universal styling affecting nearly
     every page goes here, like
     normalize, global text styling,
-    or basic and reusable layout rules.
+    global classes, plugin styling, etc.
 \*------------------------------------*/
-
-    /*------------------------------------*\
-        ::Base
-        ----------------------------------*
-        base is based off normalize and is
-        where you should add all high-level
-        styling for elements and global
-        classes.
-    \*------------------------------------*/
-    @import "planets/base/**/*";
-
-    /*------------------------------------*\
-        ::WordPress (WP)
-        ----------------------------------*
-        built-in wordpress classes like
-        .alignleft go here as a baseline
-        for handling wordpress's wysiwyg
-        output.
-    \*------------------------------------*/
-    @import "planets/wp/**/*";
-
-    /*------------------------------------*\
-        ::Plugins
-        ----------------------------------*
-        global plugin styling or overrides
-        go here.
-    \*------------------------------------*/
-    @import "planets/plugins/**/*";
-
-    /*------------------------------------*\
-        ::Layouts
-        ----------------------------------*
-        layouts define block positioning
-        for elements and are reusable.
-        visual skinning of modules should
-        go in moons/views so layouts
-        maintain portability between
-        sites.
-    \*------------------------------------*/
-    @import "planets/layouts/**/*";
+@import "base/**/*";
 
 /*------------------------------------*\
-    ::Moons
+    ::Components
     ----------------------------------*
     styling that affects the individual
-    elements on the site goes here,
-    like header, contact form, logo,
-    navigation, etc.
+    modules on the site goes here,
+    like sliders, contact forms, logos,
+    etc.
 \*------------------------------------*/
+@import "components/**/*";
 
-    /*------------------------------------*\
-        ::Components
-        ----------------------------------*
-        components are non-transferable
-        modules or elements that wouldn't
-        make sense to reuse on future
-        sites. because of this, they
-        can contain layout and view in
-        the same file.
-    \*------------------------------------*/
-    @import "moons/components/**/*";
-
-    /*------------------------------------*\
-        ::Views
-        ----------------------------------*
-        a view skins a layout located in
-        planets/layouts. a view should not
-        exist if there is no matching
-        layout (use a component instead)
-    \*------------------------------------*/
-    @import "moons/views/**/*";
 
 /*------------------------------------*\
-    ::Comets
+    ::Layout
     ----------------------------------*
-    styling that affects special
-    versions of elements goes here,
-    like if the home page has special
-    header that differs from every
-    other page.
+    styling that affects major layout
+    elements goes here, like header and
+    footer, navigation, sidebars, etc.
 \*------------------------------------*/
-@import "comets/**/*";
+@import "layout/**/*";
 
 /*------------------------------------*\
-    ::Stars
+    ::Templates
+    ----------------------------------*
+    styling specific to a particular
+    template goes here, like home-
+    specific styling or a blog post's
+    styling.
+\*------------------------------------*/
+@import "templates/**/*";
+
+/*------------------------------------*\
+    ::Shame (in Global)
     ----------------------------------*
     styling that is quick and dirty can
     go here, like unrefined styling you
@@ -144,4 +70,4 @@
     resets that require !important to
     work.
 \*------------------------------------*/
-@import "debris/**/*";
+@import "global/shame";
