Separate popups from achievements module

--- a/_includes/modules/timeline/global.html
+++ b/_includes/modules/timeline/global.html
@@ -3,5 +3,6 @@
         {% include modules/timeline/detail.html %}
         {% include modules/timeline/exp.html %}
         {% include modules/timeline/achieve.html %}
+        {% include modules/timeline/popups.html %}
     </div> <!-- .timeline__inner -->
 </section> <!-- .timeline -->
