Add new "now applying" for 2017

--- a/_includes/modules/timeline/detail.html
+++ b/_includes/modules/timeline/detail.html
@@ -9,7 +9,7 @@
         <- - - - - - - - - - - - - - - - -->
         <h2>Objective</h2>
 
-        <p>To develop creatively inspiring, functionally empowering, visually compelling, information rich websites.</p>
+        <p>I'm a Front-End Engineer who specializes in custom WordPress themes. I've worked full time in website development for over four years as an engineer and team leader, and I'm highly passionate about this industry!</p>
 
         <!-- - - - - - - - - - - - - - - - >
             ::Qualifications
