--- a/_includes/modules/timeline/exp.html
+++ b/_includes/modules/timeline/exp.html
@@ -10,8 +10,15 @@
     <!-- - - - - - - - - - - - - - - - >
         ::Experience
     <- - - - - - - - - - - - - - - - -->
+    <div class="exp__group exp__group--hire">
+        <!-- 2017-Present -->
+        <h3>Now Available for Hire!</h3>
+        <h4>Front-End Engineer</h4>
+        <p>I'm currently looking for the next level-up in my career and couldn't be more excited! In the meantime I'm teaching myself React/Redux and the new WordPress REST API. If you know someone looking for an extraordinary (and humble) developer to enhance their team, please <a href="javascript:void(0);"><label for="popup--email">email me about jobs</label></a>.</p>
+    </div>
+
     <div class="exp__group exp__group--zenman">
-        <!-- 2012-Present -->
+        <!-- 2012-2016 -->
         <h3>Zenman Productions</h3>
         <h4>Front-End Developer</h4>
         <ul>
@@ -72,8 +79,9 @@
     </div>
 
     <ul class="timeline__year-list">
-        <!-- in emmet... .timeline__year{20$$@-}*16 -->
+        <!-- in emmet... .timeline__year{20$$@-}*17 -->
         <li class="timeline__year"><span>today</span></li>
+        <li class="timeline__year"><span>2017</span></li>
         <li class="timeline__year"><span>2016</span></li>
         <li class="timeline__year"><span>2015</span></li>
         <li class="timeline__year"><span>2014</span></li>
