--- a/_sass/components/timeline/_timeline-exp.scss
+++ b/_sass/components/timeline/_timeline-exp.scss
@@ -38,6 +38,9 @@
                 display: none;
             }
         }
+        &--hire {
+            @include year(2016, 2017.5);
+        }
         &--zenman {
             @include year(2012, 2016);
         }
