Begin adding new comments

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,3 +1,30 @@
+<!--
+ _   _ _   _____ _                   _
+| | | (_) |_   _| |__   ___ _ __ ___| |
+| |_| | |   | | | '_ \ / _ \ '__/ _ \ |
+|  _  | |   | | | | | |  __/ | |  __/_|
+|_| |_|_|   |_| |_| |_|\___|_|  \___(_)
+- - - - - - - - - - - - - - - - - - - -
+
+So glad you're viewing my source code! I've tried to add a lot of comments to explain the choices I made in development. I realize it adds a little weight to the load, but I feel it's worth it for my personal portfolio (and no, I'm not this chatty in production code ;-)
+
+Might want to check out the files on GitHub to dig deeper into my code:
+
+https://github.com/tcmulder/tcmulder.github.io
+
+- - - -
+
+Technical Website Goals:
+
+I have a lot of experience hand-coding complex, custom WordPress themes from scratch, but decided to go another route with this personal portfolio.
+
+- I built this using Jekyll and GitHub Pages which I'd been planning to learn for a while now. I love working with WordPress and other CMS's and site platforms as well.
+
+- I built this using no JavaScript, so all behavior is just CSS and HTML. I do know and love JavaScript, but decided to challenge myself, mostly for the fun of it. I realize this presents semantic and accessibility issues: I'd never use these techniques in production code for client sites :-D
+
+- I used vw and vh units (with em units internally) with some calc tricks to pull off the complicated resizing and positioning of the timeline features. Unfortunately this does mean way more things are positioned absolute or fixed than I'm normally comfortable with... but it's the only way to achieve the result I wanted.
+
+-->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
