--- a/_includes/modules/timeline/exp.html
+++ b/_includes/modules/timeline/exp.html
@@ -1,24 +1,18 @@
-<!-- - - - - - - - - - - - - - - - >
-    ::Experience Column
-<- - - - - - - - - - - - - - - - -->
 <article class="timeline__col exp">
 
     <div class="exp__group exp__group--title">
         <h2>Experience</h2>
     </div>
 
-    <!-- - - - - - - - - - - - - - - - >
-        ::Experience
-    <- - - - - - - - - - - - - - - - -->
     <div class="exp__group exp__group--hire">
-        <!-- 2017-Present -->
+        {% comment %} 2017-Present {% endcomment %}
         <h3>Now Available for Hire!</h3>
         <h4>Front-End Engineer</h4>
         <p>I'm currently looking for the next level-up in my career and couldn't be more excited! In the meantime I'm teaching myself React/Redux and the new WordPress REST API. If you know someone looking for an extraordinary (and humble) developer to enhance their team, please <a href="javascript:void(0);"><label for="popup--email">email me about jobs</label></a>.</p>
     </div>
 
     <div class="exp__group exp__group--zenman">
-        <!-- 2012-2016 -->
+        {% comment %} 2012-2016 {% endcomment %}
         <h3>Zenman Productions</h3>
         <h4>Front-End Developer</h4>
         <ul>
@@ -33,7 +27,7 @@
     </div>
 
     <div class="exp__group exp__group--du">
-        <!-- 2011-2012 -->
+        {% comment %} 2011-2012 {% endcomment %}
         <h3>University of Denver</h3>
         <h4>Graduate Student</h4>
         <ul>
@@ -47,7 +41,7 @@
     </div>
 
     <div class="exp__group exp__group--usmc">
-        <!-- 2006-2010 -->
+        {% comment %} 2006-2010 {% endcomment %}
         <h3>1st LAR United States Marine Corps</h3>
         <h4>Infantry Scout</h4>
         <ul>
@@ -59,19 +53,19 @@
     </div>
 
     <div class="exp__group exp__group--tech">
-        <!-- 2002-2006 -->
+        {% comment %} 2002-2006 {% endcomment %}
         <h3>Montana Tech of The University of Montana</h3>
         <h4>Undergraduate Student</h4>
         <ul>
             <li>I received a Bachelor of Science degree in Professional and Technical Communication (PTC program).</li>
             <li>Mostly I focused on HTML, CSS, jQuery, and ActionScript languages, along with Adobe design software.</li>
         </ul>
-        <!-- 2004-2006 -->
+        {% comment %} 2004-2006 {% endcomment %}
         <h4>Teachers Aide—PTC Department</h4>
         <ul>
             <li>I assisted students as a teacher's aide in four web design courses, most of which I was taking for the first time myself.</li>
         </ul>
-        <!-- 2002-2006 -->
+        {% comment %} 2002-2006 {% endcomment %}
         <h4>Freelance Visual Designer—t-Creative</h4>
         <ul>
             <li>I was paid to create a brochure, media CD, and two websites for the PTC Department at Montana Tech.</li>
@@ -79,7 +73,7 @@
     </div>
 
     <ul class="timeline__year-list">
-        <!-- in emmet... .timeline__year{20$$@-}*17 -->
+        {% comment %} in emmet... .timeline__year{20$$@-}*17 {% endcomment %}
         <li class="timeline__year"><span>today</span></li>
         <li class="timeline__year"><span>2017</span></li>
         <li class="timeline__year"><span>2016</span></li>
@@ -99,4 +93,4 @@
         <li class="timeline__year"><span>2002</span></li>
     </ul>
 
-</article> <!-- .exp -->
+</article>
