--- a/_includes/modules/timeline/global.html
+++ b/_includes/modules/timeline/global.html
@@ -4,5 +4,5 @@
         {% include modules/timeline/exp.html %}
         {% include modules/timeline/achieve.html %}
         {% include modules/timeline/popups.html %}
-    </div> <!-- .timeline__inner -->
-</section> <!-- .timeline -->
+    </div>
+</section>
