--- a/_includes/modules/timeline/detail.html
+++ b/_includes/modules/timeline/detail.html
@@ -1,51 +1,50 @@
-<!-- - - - - - - - - - - - - - - - >
-    ::Details Column
-<- - - - - - - - - - - - - - - - -->
 <article class="timeline__col detail">
     <div class="detail__inner--fixed">
 
-        <!-- - - - - - - - - - - - - - - - >
-            ::Objective
-        <- - - - - - - - - - - - - - - - -->
         <h2>Objective</h2>
-
         <p>I'm a Front-End Engineer who specializes in custom WordPress themes. I've worked full time in website development for over four years as an engineer and team leader, and I'm highly passionate about this industry!</p>
 
-        <!-- - - - - - - - - - - - - - - - >
-            ::Qualifications
-        <- - - - - - - - - - - - - - - - -->
+        <!--
+        This slider was fun: it's pure HTML and CSS with no JavaScript. Not something I'd use in production code but a fun challenge nonetheless.
+        -->
         <h2>Qualifications</h2>
-
         <div class="icon-slider">
+
             <input type="radio" name="icon-slider-nav" id="slide-1" class="icon-slider__trigger" checked />
             <label for="slide-1" class="icon-slider__link">
                 <svg viewbox="0 0 1000 1000">
                     <use xlink:href="images/general.sprite.svg#brain"></use>
                 </svg>
             </label>
+
             <input type="radio" name="icon-slider-nav" id="slide-2" class="icon-slider__trigger" />
             <label for="slide-2" class="icon-slider__link">
                 <svg viewbox="0 0 1000 1000">
                     <use xlink:href="images/general.sprite.svg#code"></use>
                 </svg>
             </label>
+
             <input type="radio" name="icon-slider-nav" id="slide-3" class="icon-slider__trigger" />
             <label for="slide-3" class="icon-slider__link">
                 <svg viewbox="0 0 1000 1000">
                     <use xlink:href="images/general.sprite.svg#tools"></use>
                 </svg>
             </label>
+
             <input type="radio" name="icon-slider-nav" id="slide-4" class="icon-slider__trigger" />
             <label for="slide-4" class="icon-slider__link">
                 <svg viewbox="0 0 1000 1000">
                     <use xlink:href="images/general.sprite.svg#me"></use>
                 </svg>
             </label>
+
             <div class="icon-slider__small-frame">
                 <div class="icon-slider__big-frame">
                     <div class="icon-slider__slide icon-slider__slide--1">
+
                         <h3>Capabilities</h3>
                         <ul class="icon-slider__chart">
+                            <!-- Through creative use of styling and :before/:after pseudo elements inside, each bar of the graph is simply represented by two HTML elements. -->
                             <li class="icon-slider__stat" data-per="100">
                                 <span>Front-End Development</span>
                             </li>
@@ -71,8 +70,10 @@
                                 <span>Graphics Design</span>
                             </li>
                         </ul>
+
                     </div>
                     <div class="icon-slider__slide icon-slider__slide--2">
+
                         <h3>Technologies</h3>
                         <ul class="icon-slider__chart">
                             <li class="icon-slider__stat" data-per="100">
@@ -100,8 +101,10 @@
                                 <span>Bash Unix Shell</span>
                             </li>
                         </ul>
+
                     </div>
                     <div class="icon-slider__slide icon-slider__slide--3">
+
                         <h3>Software</h3>
                         <ul class="icon-slider__chart">
                             <li class="icon-slider__stat" data-per="100">
@@ -129,8 +132,10 @@
                                 <span>Illustrator and Sketch</span>
                             </li>
                         </ul>
+
                     </div>
                     <div class="icon-slider__slide icon-slider__slide--4">
+
                         <h3>Character</h3>
                         <ul class="icon-slider__chart">
                             <li class="icon-slider__stat" data-per="100">
@@ -158,18 +163,18 @@
                                 <span>Constantly Improving</span>
                             </li>
                         </ul>
+
                     </div>
                 </div>
             </div>
         </div>
 
-        <!-- - - - - - - - - - - - - - - - >
-            ::Contact
-        <- - - - - - - - - - - - - - - - -->
         <div class="contact-links">
+
             <div class="contact-links__title">
                 <h2>Contact</h2>
             </div>
+
             <label for="popup--email" class="contact-links__group">
                 <span class="contact-links__icon">
                     <svg viewbox="0 0 1000 1000">
@@ -179,6 +184,7 @@
                 <h3>Email</h3>
                 <span class="print-version print-version--email"></span>
             </label>
+
             <a href="https://github.com/tcmulder" target="_blank" class="contact-links__group">
                 <span class="contact-links__icon">
                     <svg viewbox="0 0 1000 1000">
@@ -188,6 +194,7 @@
                 <h3>GitHub</h3>
                 <span class="print-version">https://github.com/tcmulder</span>
             </a>
+
             <a href="http://codepen.io/tcmulder/" target="_blank" class="contact-links__group">
                 <span class="contact-links__icon">
                     <svg viewbox="0 0 1000 1000">
@@ -197,6 +204,7 @@
                 <h3>CodePen</h3>
                 <span class="print-version">http://codepen.io/tcmulder/</span>
             </a>
+
             <a href="https://twitter.com/tcmulder" target="_blank" class="contact-links__group">
                 <span class="contact-links__icon">
                     <svg viewbox="0 0 1000 1000">
@@ -206,7 +214,8 @@
                 <h3>Twitter</h3>
                 <span class="print-version">https://twitter.com/tcmulder</span>
             </a>
+
         </div>
 
-    </div> <!-- .detail__inner -->
-</article> <!-- .detail -->
+    </div>
+</article>
