--- a/_includes/modules/timeline/popups.html
+++ b/_includes/modules/timeline/popups.html
@@ -1,6 +1,3 @@
-<!-- - - - - - - - - - - - - - - - >
-    ::Popups
-<- - - - - - - - - - - - - - - - -->
 <div class="popup">
     <input type="checkbox" id="popup--email" class="popup__trigger">
     <div class="popup__frame">
@@ -22,4 +19,4 @@
             </form>
         </div>
     </div>
-</div> <!-- .popup -->
+</div>
