Switch to different comment format

--- a/_includes/modules/timeline/detail.html
+++ b/_includes/modules/timeline/detail.html
@@ -3,9 +3,9 @@
 
         <h2>Objective</h2>
         <p>I'm a Front-End Engineer who specializes in custom WordPress themes. I've worked full time in website development for over four years as an engineer and team leader, and I'm highly passionate about this industry!</p>
-
         <!--
-        This slider was fun: it's pure HTML and CSS with no JavaScript. Not something I'd use in production code but a fun challenge nonetheless.
+        This slider was fun: it's pure HTML and CSS with no JavaScript. Not
+        something I'd use in production code but a fun challenge nonetheless.
         -->
         <h2>Qualifications</h2>
         <div class="icon-slider">
@@ -44,7 +44,11 @@
 
                         <h3>Capabilities</h3>
                         <ul class="icon-slider__chart">
-                            <!-- Through creative use of styling and :before/:after pseudo elements inside, each bar of the graph is simply represented by two HTML elements. -->
+                            <!-- portfolio note:
+                            Through creative use of styling and :before and
+                            :after pseudo elements inside, each bar of the
+                            graph is simply represented by two HTML elements.
+                            -->
                             <li class="icon-slider__stat" data-per="100">
                                 <span>Front-End Development</span>
                             </li>
