Add comments to most html

--- a/_includes/modules/timeline/detail.html
+++ b/_includes/modules/timeline/detail.html
@@ -38,6 +38,10 @@
                 </svg>
             </label>
 
+            <!-- portfolio note:
+            Try resizing the window vertically (sorter/taller): the vh
+            measurement allowed me to grow/shrink this thing pretty flexibly.
+            -->
             <div class="icon-slider__small-frame">
                 <div class="icon-slider__big-frame">
                     <div class="icon-slider__slide icon-slider__slide--1">
