--- a/_includes/modules/timeline/exp.html
+++ b/_includes/modules/timeline/exp.html
@@ -4,15 +4,18 @@
         <h2>Experience</h2>
     </div>
 
-    <div class="exp__group exp__group--hire">
-        {% comment %} 2017-Present {% endcomment %}
+    <!-- portfolio note:
+    Of particular note here: check out the crazy calc function that's allowing
+    these exp__group blocks to grow taller proportionate to the window getting
+    narrower... not something absolute positioned things like to do.
+    -->
+    <div class="exp__group exp__group--hire">{% comment %} 2017-Present {% endcomment %}
         <h3>Now Available for Hire!</h3>
         <h4>Front-End Engineer</h4>
         <p>I'm currently looking for the next level-up in my career and couldn't be more excited! In the meantime I'm teaching myself React/Redux and the new WordPress REST API. If you know someone looking for an extraordinary (and humble) developer to enhance their team, please <a href="javascript:void(0);"><label for="popup--email">email me about jobs</label></a>.</p>
     </div>
 
-    <div class="exp__group exp__group--zenman">
-        {% comment %} 2012-2016 {% endcomment %}
+    <div class="exp__group exp__group--zenman">{% comment %} 2012-2016 {% endcomment %}
         <h3>Zenman Productions</h3>
         <h4>Front-End Developer</h4>
         <ul>
@@ -26,8 +29,7 @@
         </ul>
     </div>
 
-    <div class="exp__group exp__group--du">
-        {% comment %} 2011-2012 {% endcomment %}
+    <div class="exp__group exp__group--du">{% comment %} 2011-2012 {% endcomment %}
         <h3>University of Denver</h3>
         <h4>Graduate Student</h4>
         <ul>
@@ -40,8 +42,7 @@
         </ul>
     </div>
 
-    <div class="exp__group exp__group--usmc">
-        {% comment %} 2006-2010 {% endcomment %}
+    <div class="exp__group exp__group--usmc">{% comment %} 2006-2010 {% endcomment %}
         <h3>1st LAR United States Marine Corps</h3>
         <h4>Infantry Scout</h4>
         <ul>
@@ -52,28 +53,31 @@
         </ul>
     </div>
 
-    <div class="exp__group exp__group--tech">
-        {% comment %} 2002-2006 {% endcomment %}
+    <div class="exp__group exp__group--tech">{% comment %} 2002-2006 {% endcomment %}
         <h3>Montana Tech of The University of Montana</h3>
         <h4>Undergraduate Student</h4>
         <ul>
             <li>I received a Bachelor of Science degree in Professional and Technical Communication (PTC program).</li>
             <li>Mostly I focused on HTML, CSS, jQuery, and ActionScript languages, along with Adobe design software.</li>
-        </ul>
-        {% comment %} 2004-2006 {% endcomment %}
+        </ul>{% comment %} 2004-2006 {% endcomment %}
         <h4>Teachers Aide—PTC Department</h4>
         <ul>
             <li>I assisted students as a teacher's aide in four web design courses, most of which I was taking for the first time myself.</li>
-        </ul>
-        {% comment %} 2002-2006 {% endcomment %}
+        </ul>{% comment %} 2002-2006 {% endcomment %}
         <h4>Freelance Visual Designer—t-Creative</h4>
         <ul>
             <li>I was paid to create a brochure, media CD, and two websites for the PTC Department at Montana Tech.</li>
         </ul>
     </div>
 
-    <ul class="timeline__year-list">
-        {% comment %} in emmet... .timeline__year{20$$@-}*17 {% endcomment %}
+    <ul class="timeline__year-list">{% comment %} in emmet... .timeline__year{20$$@-}*17 {% endcomment %}
+        <!-- portfolio note:
+        Check out the positioning acrobatics in SASS to get the years column and
+        these sections of experience lined up and covering the right date range:
+        https://github.com/tcmulder/tcmulder.github.io/blob/master/_sass/moons/components/timeline/__timeline-global.scss
+        True, it uses a lot of absolute positioning, which I don't like... but
+        can't argue with the results! ¯\_(ツ)_/¯
+        -->
         <li class="timeline__year"><span>today</span></li>
         <li class="timeline__year"><span>2017</span></li>
         <li class="timeline__year"><span>2016</span></li>
