--- a/_includes/modules/timeline/popups.html
+++ b/_includes/modules/timeline/popups.html
@@ -1,3 +1,9 @@
+<!-- portfolio note:
+Popups without JavaScript? Yep, with the non-semantic use of <label>,
+<checkbox>, and :checked styling you can activate and close popups quite
+easily. Wouldn't recommend this on production sites though: just do
+JavaScript for better semantics, functionality, and accessibility.
+-->
 <div class="popup">
     <input type="checkbox" id="popup--email" class="popup__trigger">
     <div class="popup__frame">
