Add link to pdf version

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,8 @@
 <footer class="main-foot">
     <div class="main-foot__inner">
         <div class="main-foot__text">
-            <a href="/credits.html" class="main-foot__link">Credits</a>
+            <a href="/credits.html" class="main-foot__creds">Credits</a>
+            <a href="/pdf/tomas-mulder-resume.pdf" class="main-foot__print" target="_blank" class="main-foot__link">Printable PDF</a>
             <span class="main-foot__copy">&copy; 2016 Tomas Mulder</span>
         </div>
     </div>
