--- a/_sass/layout/_main-foot.scss
+++ b/_sass/layout/_main-foot.scss
@@ -14,6 +14,8 @@
         font-style: italic;
         border-top: 1px solid lighten($color-2, 65%);
         color: desaturate(lighten($color-1, 35%), 35%);
+        display: flex;
+        justify-content: space-between;
         @include bp($tab--max){
             width: 50% - .08;
             font-size: calc(.5rem + .7vw); // milder vw font resizing
@@ -24,8 +26,10 @@
             border-top-color: darken($color-1-light, 10%);
         }
     }
-    &__link {
+    &__creds,
+    &__print {
         color: desaturate(lighten($color-1, 35%), 35%);
+        cursor: pointer;
         &:hover {
             color: $color-2;
         }
