--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,6 @@
+{% comment %}
+    The HTML output for standard page footers.
+{% endcomment %}
 <footer class="main-foot">
     <div class="main-foot__inner">
         <div class="main-foot__text">
