--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,3 +1,6 @@
+{% comment %}
+    The HTML output for standard page headers.
+{% endcomment %}
 <header class="main-head">
     <div class="logo">
         <div class="logo__first">
