--- a/_includes/modules/timeline/detail.html
+++ b/_includes/modules/timeline/detail.html
@@ -3,7 +3,7 @@
 
         <h2>Objective</h2>
         <p>I'm a Front-End Engineer who specializes in custom WordPress themes. I've worked full time in website development for over four years as an engineer and team leader, and I'm highly passionate about this industry!</p>
-        <!--
+        <!-- portfolio note:
         This slider was fun: it's pure HTML and CSS with no JavaScript. Not
         something I'd use in production code but a fun challenge nonetheless.
         -->
