--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,8 +2,10 @@
 default_css: styles
 ---
 <!DOCTYPE html>
-<html>
-    {% include head.html %}
+<html lang="en">
+    <head>
+        {% include head.html %}
+    </head>
     <body>
         {% include header.html %}
         {{ content }}
