--- a/_sass/components/timeline/__timeline-global.scss
+++ b/_sass/components/timeline/__timeline-global.scss
@@ -1,129 +1,6 @@
 /*------------------------------------*\
     ::Timeline Global
 \*------------------------------------*/
-
-/*------------------------------------*\
-    ::Year Position Mixin
-\*------------------------------------*/
-// Usage:
-// .el {
-//     @include year(2010, 2015); // spans 2010 to 2015
-//     @include year(false, 2015); // starts at 2015 with auto height
-//     @include year(false, 2015.5); // starts at Jul 2, 2015 with auto height
-//     @include year(); // height spans 1 year with no top defined
-// }
-@mixin year($start: 0, $end: 1, $total: 2017, $gaps: 9em) {
-    @include bp($min: $desk--max + 1){
-        @if $end != 1 {
-            top: get-year-top(false, $start, $end, $total, $gaps);
-        }
-        @if $start != false {
-            height: get-year-height(false, $start, $end, $gaps);
-        }
-    }
-    @include bp($desk--max){
-        @if $end != 1 {
-            top: get-year-top(11.5vw, $start, $end, $total, $gaps);
-        }
-        @if $start != false {
-            height: get-year-height(11.5vw, $start, $end, $gaps);
-        }
-    }
-    @include bp($tab--max){
-        @if $end != 1 {
-            top: get-year-top(16vw, $start, $end, $total, $gaps);
-        }
-        @if $start != false {
-            height: get-year-height(16vw, $start, $end, $gaps);
-        }
-    }
-    @include bp($phone--max){
-        @if $end != 1 {
-            top: get-year-top(14.5vw, $start, $end, $total, $gaps);
-        }
-        @if $start != false {
-            height: get-year-height(14.5vw, $start, $end, $gaps);
-        }
-    }
-    @include bp($phone--mid){
-        @if $end != 1 {
-            top: get-year-top(36vw, $start, $end, $total, $gaps);
-        }
-        @if $start != false {
-            height: get-year-height(36vw, $start, $end, $gaps);
-        }
-    }
-}
-// calculation functions
-@function get-year-top($offset, $start, $end, $total, $gaps){
-    @if $offset == false {
-        @return calc((#{$gaps}) * (#{$total - $end + 1}));
-    } @else {
-        @return calc((#{$gaps} + (#{$gaps} - #{$offset})) * (#{$total - $end + 1}));
-    }
-}
-@function get-year-height($offset, $start, $end, $gaps){
-    @if $offset == false {
-        @return calc((#{$gaps}) * (#{$end - $start}));
-    } @else {
-        @return calc((#{$gaps} + (#{$gaps} - #{$offset})) * (#{$end - $start}));
-    }
-}
-
-/*------------------------------------*\
-    ::Reusable Global Extends
-\*------------------------------------*/
-%year {
-    @include year();
-    text-align: center;
-    &:first-child {
-        top: 1em;
-    }
-    &:last-child {
-        height: 1.5em;
-    }
-    span {
-        display: block;
-        font-size: .75em;
-        transform: translateY(-50%);
-    }
-    &:before,
-    &:after {
-        content: "";
-        position: absolute;
-        border: 0 solid $color-2;
-        border-width: $timeline-border-width 0 0;
-        width: .4em;
-        height: 0;
-        top: -$timeline-border-width/2;
-        border-radius: 0;
-    }
-    &:before {
-        left: 0;
-    }
-    &:after {
-        right: 0;
-    }
-}
-%col {
-    position: relative;
-    z-index: 10;
-    width: 33.3% - .08;
-    padding: 0 $gap;
-    @include bp($tab--max){
-        width: 50% - .08;
-        font-size: calc(.5rem + .7vw); // milder vw font resizing
-    }
-    @include bp($phone--max){
-        font-size: 1em;
-        width: 50% - .08;
-        padding-right: 7em;
-    }
-}
-
-/*------------------------------------*\
-    ::Wrapper/Global Layout/Styling
-\*------------------------------------*/
 .timeline {
     @include clearfix;
     position: relative;
@@ -144,6 +21,14 @@
         border-width: 0 $timeline-border-width;
         margin: 0;
         padding: 0;
+        /*  portfolio note:
+            Notice media queries come within the selector at the end. This
+            ensures everything's grouped together: if I'm working on
+            .timeline__year-list, it's all in just one set of curly braces. If
+            I need to move or even remove .timeline__year-list, then I only
+            need to worry about everything inside that one set of curly braces
+            and not dig around the surrounding code or within other files.
+        */
         @include bp($tab--max){
             right: 0;
         }
