--- a/_sass/global/_shame.scss
+++ b/_sass/global/_shame.scss
@@ -1,5 +1,7 @@
 /*------------------------------------*\
             (╯°□°）╯︵ ┻━┻
+    Read all about it:
+    http://csswizardry.com/2013/04/shame-css/
 \*------------------------------------*/
 
 /*------------------------------------*\
