--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,7 +4,7 @@
 <footer class="main-foot">
     <div class="main-foot__inner">
         <div class="main-foot__text">
-            <a href="/pdf/tomas-mulder-resume.pdf" class="main-foot__print" target="_blank" class="main-foot__link">Printable PDF</a>
+            <a href="/pdf/tomas-mulder-resume.pdf" class="main-foot__print" target="_blank">Printable PDF</a>
             <span class="main-foot__copy">&copy; 2016 Tomas Mulder</span>
             <a href="/credits.html" class="main-foot__creds">Credits</a>
         </div>
