--- a/_sass/global/_mixins.scss
+++ b/_sass/global/_mixins.scss
@@ -26,6 +26,14 @@
 //     @include year(); // height spans 1 year with no top defined
 // }
 @mixin year($start: 0, $end: 1, $total: 2017, $gaps: 9em) {
+    /*  portfolio note:
+        This was wild! I needed to have the height of an absolute-positioned
+        element grow in height as the width shrank in width, without relying
+        on the content within it to push things around. For example, Zenman
+        needed to start at 2012 and end at 2016, but as the screen narrowed,
+        the text got vertically taller and would break out of its container.
+        Not so with this nifty mixin.
+    */
     @include bp($min: $desk--max + 1){
         @if $end != 1 {
             top: get-year-top(false, $start, $end, $total, $gaps);
