Adjust line over footer at desktop

--- a/_sass/components/_contact-links.scss
+++ b/_sass/components/_contact-links.scss
@@ -3,7 +3,7 @@
 \*------------------------------------*/
 .contact-links {
     position: absolute;
-    bottom: $gap;
+    bottom: 0;
     left: $gap;
     right: $gap;
     font-size: 0;
